добавил users, для users были добавлены ручки (get, post,patch, delete), произвел рефакторинг для users, tasks , добавил миграции.
